--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.UISellerMyProductList"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".activities.UISellerMyRestaurant">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -35,7 +36,8 @@
         </activity>
         <activity
             android:name=".activities.UISellerProfit"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".activities.UISellerMyRestaurant">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
